fixed some details

--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
         </div>
         <div class="about-text animate__animated" data-animation="fadeInRight">
           <h3>I'm a Dedicated Actuarial Student</h3>
-          <p> Passionate about risk analysis, financial modeling, and statistical problem-solving
-
-            Currently pursuing actuarial qualifications with a strong foundation in mathematics and statistics. My goal is to leverage analytical skills to solve complex challenges in insurance and financial risk management.</p>
-         
+          <p> Highly motivated and hardworking final-year Actuarial Science student, known for being punctual, disciplined,
+            and reliable. Calm and composed, with a passion for taking on new challenges and learning new things.
+            Committed to accuracy, follows rules closely, and brings a positive, focused approach to all tasks.
           <div class="about-btns">
-            <a href="#" class="btn btn-primary">Download CV</a>
+            <a href="assets/Swaichchha Bhandari Cv.pdf" download class="btn btn-primary">
+              Download CV
+            </a>
             <a href="#contact" class="btn btn-secondary">Contact Me</a>
           </div>
         </div>
@@ -193,7 +194,7 @@
             <i class="fas fa-phone-alt"></i>
             <div>
               <h4>Phone</h4>
-              <p>+977 9816627856</p>
+              <p>+977 9748421248</p>
             </div>
           </div>
           <div class="contact-social">
