--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <img src="./images/about.jpg" alt="About Swaichahha" style="width: 80%; max-width: 600px; height: auto;">
           <div class="about-badge">
             
-            <span>4/13</span>
+            <span>4</span>
             <p>IFOA exams completed</p>
           </div>
         </div>
